Add instagram link

--- a/index.html
+++ b/index.html
@@ -637,7 +637,12 @@
           href="https://www.frontendmentor.io?ref=challenge"
           target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#" class="text-grey">Fave Codes</a>.
+        >. Coded by
+        <a
+          href="https://www.instagram.com/fave_codes?igsh=cDdmZmZleDlwcHNp&utm_source=qr"
+          class="text-grey"
+          >Fave Codes</a
+        >.
       </p>
     </footer>
   </body>
