--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
             </div>
 
             <button
-              class="px-5 py-2 bg-red text-grey flex items-center justify-center md:mx-auto rounded-lg cursor-pointer hover:bg-grey hover:text-red hover:outline hover:outline-2 hover:outline-red w-70 md:w-75"
+              class="px-5 py-2 bg-red text-grey flex items-center justify-center md:mx-auto rounded-lg cursor-pointer hover:bg-grey hover:text-red hover:outline hover:outline-2 hover:outline-red w-70 md:w-75 -mt-2"
             >
               Contact Us
             </button>
