--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <title>Frontend Mentor | Bookmark landing page</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <script src="script.js" defer></script>
     <style type="text/tailwindcss">
       @theme {
         --color-clifford: #da373d;
